Replace table-based deferred index tracking with replay-based discovery
Remove DeferredIndexOperation/DeferredIndexOperationColumn tracking tables
and replace with a replay-based approach: replay all upgrade steps to find
DeferredAddIndex changes, resolve cascades via DeferredIndexTracker, compare
surviving deferred indexes against the live DB schema, and build missing ones.

New classes:
- DeferredIndexTracker: in-memory cascade resolution (void methods)
- DeferredIndexProgress: progress POJO replacing Map<DeferredIndexStatus, Integer>
- SchemaChangeSequence.findSurvivingDeferredIndexes(): replay discovery

Deleted classes (7 production, 3 test):
- DeferredIndexOperation, DeferredIndexOperationDAO/Impl, DeferredIndexStatus
- DeferredIndexChangeService/Impl, CreateDeferredIndexOperationTables

Key changes:
- DeferredIndexExecutor.execute() takes List<DeferredAddIndex> instead of no-arg
- DeferredIndexReadinessCheck methods take Collection<Class<? extends UpgradeStep>>
- DeferredIndexService requires setUpgradeSteps() before execute()
- AbstractSchemaChangeVisitor uses DeferredIndexTracker (no SQL emitted for deferred ops)
- DeferredAddIndex.isApplied() only checks DB schema (no queue check)
- Upgrade.findPath() filters to applied steps for augmentation/force-build
- DatabaseUpgradeTableContribution no longer defines tracking tables
- H2v2 dialect now overrides supportsDeferredIndexCreation() to return true

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>